--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         <img id="image-two">
         <img id="image-three">
       </section>
-      <div id="button">
+      <div id="button"></div>
+      <section id="hidden-results">
         <ul id="results"></ul>
-      </div>
+      </section>
     </main>
     <footer>
       <script src="js/app.js"></script>
