--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
         <img id="image-two">
         <img id="image-three">
       </section>
-      <div id="button"></div>
+      <div></div>
       <section id="hidden-results">
-        <ul id="results"></ul>
+        <canvas id="myChart" width="900" height="600"></canvas>
       </section>
     </main>
     <footer>
+      <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
       <script src="js/app.js"></script>
     </footer>
   </body>
